# bot_crypto

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml  fire-commands-TASK-013.10.md  pr-body-TASK-013.10-catalogue-only.md  pr-body-TASK-013.10.md  pr-body-TASK-013.4.md  pr-body-TASK-103.5.md  pr-body-TSK-104-spec.md  pr-body-TSK-200.md  pr-review-comment-TSK-104-spec-r3.md  pr-review-comment-TSK-104-spec-r4.md  pr-review-comment-TSK-104-spec.md  pyproject.toml  reqs.txt
.ai/: methodology-hybrid.md  orchestration.md
.ai/agents/: backtest-engineer.md  bdd-analyst.md  context-engineer.md  execution-engineer.md  observability-engineer.md  quant-researcher.md  risk-manager.md  security-reviewer.md  strategy-engineer.md
.ai/commands/: 00-context-scan.md  01-requirements.md  02-bdd.md  03-specify.md  04-plan.md  05-tasks.md  06-implement-next.md  07-evaluate.md  08-backtest.md  09-paper-trading.md  10-risk-review.md  11-release-live.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
bdd/features/: backtesting.feature  emergency_pause.feature  execution_engine.feature  indicators.feature  market_scanner.feature  multi_exchange.feature  ohlcv_scheduler.feature  paper_trading.feature  risk_manager.feature  signal_generation.feature
config/: assets.yaml  exchange.yaml  indicators.yaml  risk.yaml  runtime.yaml  strategies.yaml
context/: codebase-map.md  dependency-map.md  exchange-api-notes.md  impact-analysis.md  retrieval-log.md  trading-domain-notes.md
data/backtests/: .gitkeep
docs/: architecture.md  backtesting-methodology.md  ci.md  live-trading-checklist.md  paper-trading-methodology.md  risk-policy.md  strategy-design.md
docs/specs/TSK-022-multi-exchange-adapter/: 01-requirements.md  02-bdd.md
docs/specs/TSK-103-universe-scanner/: 01-requirements.md  02-bdd.md  03-specify.md  04-plan.md  05-tasks.md
docs/specs/TSK-104-scheduler/: 01-requirements.md  02-bdd.md  03-specify.md  04-plan.md
docs/specs/TSK-200-indicators-interface/: 01-requirements.md  02-bdd.md  03-specify.md  04-plan.md  05-tasks.md
docs/specs/TSK-860-trade-intelligence-feedback/: 01-requirements.md  02-bdd.md  03-specify.md  04-plan.md  05-tasks.md
evals/: README.md
notebooks/: README.md
quality/: code-quality.md  release-gates.md  risk-quality-gates.md
scripts/: README.md  check_bdd_fixtures.py  check_ledger_placeholders.ps1  git_init_and_push.ps1  open-pr-tsk-013.4.ps1  open-pr-tsk-0204.ps1  open-pr-tsk-104-walk-forward.ps1  push_f5_pr.ps1  push_f5_pr.round-17-fixes.diff  tsk-013.10-resweep.sh  validate_gates_f5.ps1  validate_local.ps1
src/trading_bot/: __init__.py  app.py
tasks/: backlog.md  decisions.md  roadmap.md  sprint-001.md  sprint-002.md  sprint-003.md
tests/: __init__.py
tests/bdd/: __init__.py  conftest.py  test_features.py
tests/integration/: __init__.py
tests/regression/: __init__.py
tests/unit/: test_app_demo.py  test_app_trade_journal.py
(+141 files in other folders)
