[project]
name = "crypto-scalping-agentic-bot"
version = "0.1.0"
description = "Sistema modular y seguro de trading algorítmico para scalping de criptomonedas, con metodología SDD/BDD/CDD/TDD."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [{ name = "Crypto Scalping Agentic Bot Contributors" }]

# Estas dependencias se confirmarán y ajustarán en Fase 1.
# La decisión completa está documentada en docs/architecture.md.
dependencies = [
  "ccxt>=4.0.0",
  "pandas>=2.1.0",
  "numpy>=1.26.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "APScheduler>=3.10.4",
  "tenacity>=8.2.3",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-bdd>=7.0.0",
  "pytest-cov>=4.1.0",
  "hypothesis>=6.98.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.31.0",
  "pip-audit>=2.7.0",
  "safety>=3.0.0",
  "anyio>=4.3.0",
]
loguru = ["loguru>=0.7.2"]
polars = ["polars>=0.20.0"]

[project.scripts]
trading-bot = "trading_bot.app:main"

# ----------------------------------------------------------------------
# Build / tool config
# ----------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trading_bot*"]

# ----------------------------
# Ruff (lint + format)
# ----------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "SIM",            # simplify
  "RUF",            # ruff-specific
]
ignore = [
  "E501", # line length managed by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------
# Mypy
# ----------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ccxt.*"]
ignore_missing_imports = true

# ----------------------------
# Pytest
# ----------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "unit: pruebas unitarias",
  "integration: pruebas que requieren servicios externos o red",
  "regression: pruebas de regresión histórica",
  "slow: pruebas lentas",
  "market: smoke-tests sobre conectores de mercado",
]

[tool.coverage.run]
source = ["src/trading_bot"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70
